--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,33 @@
     <title>Threejs Starter</title>
     <link rel="stylesheet" href="scss/index.scss" />
   </head>
+
   <body>
-    <canvas class="webgl"></canvas>
+    <main>
+      <div class="scrollable">
+        <div class="container">
+          <div class="image-container">
+            <h1>MONOCHROME</h1>
+            <img src="./img/1.jpeg" alt="Fisrt image" />
+          </div>
+
+          <div class="image-container">
+            <h1>STREET</h1>
+            <img src="./img/2.jpeg" alt="Fisrt image" />
+          </div>
+
+          <div class="image-container">
+            <h1>ABSTRACT</h1>
+            <img src="./img/3.jpeg" alt="Fisrt image" />
+          </div>
+
+          <div class="image-container">
+            <h1>ROSE</h1>
+            <img src="./img/4.jpeg" alt="Fisrt image" />
+          </div>
+        </div>
+      </div>
+    </main>
 
     <script src="js/index.js" type="module"></script>
   </body>
